# src/app.js
@@ -14,6 +14,7 @@ import letrasComando from '@/finanzas/letras/letras.comando.js'
 import ejecutarBonosCer from '@/finanzas/bonos-cer/bonosCer.comando.js'
 import ejecutarRemesas from '@/finanzas/remesas/remesas.comando.js'
 import cuentasRemuneradasUsdComando from '@/finanzas/cuentas-remuneradas-usd/cuentas-remuneradas-usd.comando.js'
+import prestamosPersonalesComando from '@/finanzas/creditos/prestamos-personales/prestamos-personales.comando.js'
 import remComando from '@/finanzas/rem/rem.comando.js'
 import fondosFciComando from '@/finanzas/fci/fondos/fondos.comando.js'
 import presidentesComando from '@/presidentes/presidentes.comando.js'
@@ -134,6 +135,10 @@ export async function iniciar(comando) {
 
     case '/v1/finanzas/cuentas-remuneradas-usd':
       await cuentasRemuneradasUsdComando()
+      break
+
+    case '/v1/finanzas/creditos/prestamosPersonales':
+      await prestamosPersonalesComando()
       break
 
     case '/v1/finanzas/remesas':
